Application time and habemus PPMs

--- a/_posts/2019-07-20-ppms.md
+++ b/_posts/2019-07-20-ppms.md
@@ -20,7 +20,7 @@ feature_image:
   - [ ] The idea (Björn)
   - [ ] First steps (Björn)
   - [ ] Application time! (Álvaro & Björn) // interview + leadership assessment
-  - [ ] White smoke (Björn & Álvaro)
+  - [ ] Habemus PPMs (Björn & Álvaro)
 - [ ] The beginning
   - [ ] Workshop: first get-together and choosing practices (Álvaro)
   - [ ] Teams distribution/Marketplace (Björn) with video presentations (Álvaro)
@@ -43,7 +43,11 @@ But first of all, let's check some of the background.
 
 To preface, who are we and why are we talking about this? 
 
-Álvaro: I am a Frontend Developer with a big passion: creating visually attractive products that impacts the user so they will not forget it so easily. I have always loved to work closely with the product owners and designers and bringing our ideas live. I have been working five years at HolidayCheck (with a three years break, immersed on an entrepreneur-adventure) and embraced the challenge of becoming a People (and Practice) Manager a little bit more than a yer ago. Working with my people, discussing with them, finding together the right path and motivating them and everyone around me have become my new passion.
+Álvaro: 
+
+I am a Frontend Developer with a big passion: creating visually attractive products that impacts the user so much, that they will not forget it so easily. I have always loved to work closely with the product owners and designers and bringing our ideas live. I have been working five years at HolidayCheck (with a three years break, immersed on an entrepreneur-adventure) and embraced the challenge of becoming a People (and Practice) Manager a little bit more than a yer ago. Working with my people, discussing with them, finding together the right path, looking for the hidden potential and motivating them and everyone around me have become my new passion.
+
+But my even bigger passion is at home: almost at the same time I got a team at work, my son was born. I like to say that, almost simultaneously, I got a new family at home and in the office, two new worlds to discover at once.
 
 Björn:
 
@@ -74,5 +78,24 @@ After having the first clear idea, a verbose role description draft and some ref
 
 Álvaro
 
-From the first moment I heard about the possibility of becoming a PPM, I felt intrigued. It has never been easy for me to make quick decisions and this one was going to change my career path as none did before. My gut feeling told me this was a train I could not miss and I jumped with eyes closed and the mind open. Becoming a Team Lead was always one of my goals and I could not imagine a better opportunity: a safe environment (after so many years at HolidayCheck), the possibility to keep doing what I knew I was good at and the idea of growing together with a group of developers in this new role.
+From the first moment I heard about the possibility of becoming a PPM, I felt intrigued. It has never been easy for me to make quick decisions and this one was going to change my career path as none did before. My gut feeling told me this was a train I could not miss and I jumped with the eyes closed and the mind open. Becoming a Team Lead was always one of my mid/long-term goals and I could not imagine a better opportunity: a safe environment (after many years at HolidayCheck, knowing the company and my colleagues), the possibility to keep doing what I knew I was good at and the idea of growing together with a group of developers in this new role. So, one of the last days before the deadline, I talked to Björn and made my decision official. Now I only had to make it through the internal recruiting phase. 
+
+This process involved two different interviews:
+
+- one interview with Björn, as Head of Technology and the one that would be our direct manager. This one was focused on the technical and the practice part of the new role. We talked about his vision and how I thought I could be a perfect match for one of those open positions, my view on the current state of the IT environment at HolidayCheck, the practice I would choose (and how I would design it) and how I imagine the first months as PPM.
+- one leadership assessment (with our CTO and the People.Team), since the role I was applying for included people management. In this second interview I could explain the reasons I had to accept the challenge, the experiences I already had as a team lead, how I would react to different situations I could encounter or how I thought I could help others to unleash their potential in this new position.
+
+Interesting for me at that time is that we got a list of questions we would be asked previous to the interviews, so we could prepare them in advance. That, and knowing the people I was going to talk to, made me feel acutally quite confident before and during both talks.
+
+### Habemus PPMs
+
+Björn: ? 
+
+Álvaro: 
+
+I can picture still the moment when I got the email announcing that I was one of the 9 chosen PPMs. Four days before my 35th birthday, I was at the Biergarten Hafenhalle in Konstanz. So finding a way to celebrate the news was not too difficult! Prost!
+
+
+
+
 
